--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "types,cript": "^5"
+    "typescript": "^5"
   }
   
 }
