--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "graphql-request": "^6.1.0",
+    "next-auth": "^4.22.1",
+    "@headlessui/react": "^1.7.15",
   },
   "devDependencies": {
     "@grafbase/sdk": "^0.12.0",
