--- a/package.json
+++ b/package.json
@@ -16,6 +16,18 @@
     "graphql-request": "^6.1.0",
     "next-auth": "^4.22.1",
     "@headlessui/react": "^1.7.15",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "cloudinary": "^1.37.1",
+    "jsonwebtoken": "^9.0.0",
+    "postcss": "8.4.24",
+    "supports-color": "^9.3.1",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@grafbase/sdk": "^0.12.0",
